--- a/conf.cfg
+++ b/conf.cfg
@@ -2,7 +2,7 @@
 debug = 1
 
 # 监听端口号
-listen = :28080
+listen = :8080
 
 # locator
 locator = tex.mfwregistry.QueryObj@tcp -h 192.168.0.7 -p 2000 -t 3600000
@@ -21,3 +21,6 @@ statdb = dev:777777@tcp(192.168.0.7:3306)/db_stat
 
 # 游戏数据库地址
 gamedb = dev:777777@tcp(192.168.0.7:3306)/herox_db_zone_1
+
+# 游戏数据库名字前缀
+gamedb-prefix = herox_
