--- a/conf_t.cfg
+++ b/conf_t.cfg
@@ -5,22 +5,22 @@ debug = 1
 listen = :8008
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.176 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 172.19.42.74 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
 
 # logo
-logo = 外网日本版本
+logo = 勇士归来3终章
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.248.176:3306)/log_zone_1
+logdb = herox:herox12345@tcp(172.19.42.74:3306)/log_zone_1
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.176:3306)/db_stat
+statdb = herox:herox12345@tcp(172.19.42.74:3306)/db_stat
 
 # 游戏数据库地址
-gamedb = herox:herox12345@tcp(172.19.248.176:3306)/db_zone_1
+gamedb = herox:herox12345@tcp(172.19.42.74:3306)/db_zone_1
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
