--- a/conf_d.cfg
+++ b/conf_d.cfg
@@ -8,7 +8,7 @@ framework-debug = 1
 listen = :8080
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 192.168.0.7 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.171 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
@@ -17,20 +17,20 @@ app = herox
 logo = herox
 
 # 日志数据库地址
-logdb = dev:777777@tcp(192.168.0.7:3306)/log_global
+logdb = herox:herox12345@tcp(172.19.248.171:3306)/log_global
 
 # web数据库地址
-statdb = dev:777777@tcp(192.168.0.7:3306)/db_stat?multiStatements=true
+statdb = herox:herox12345@tcp(172.19.248.171:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gamedb = dev:777777@tcp(192.168.0.7:3306)/herox_db_zone_1
+gamedb = herox:herox12345@tcp(172.19.248.171:3306)/db_zone_1
 
 # 游戏数据库名字前缀
-gamedb-prefix = herox_
+gamedb-prefix =
 
 # 日志开始时间
 <log>
-    dateMin = 2018-08-31
+    dateMin = 2020-11-03
     syncInterval = 10s
     statInterval = 10s
 </log>
