--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -24,7 +24,7 @@ statdb = herox:#Bugsfor$herox@tcp(172.25.2.196:3306)/db_stat?multiStatements=tru
 
 # 游戏数据库地址
 gameglobaldb = herox:#Bugsfor$herox@tcp(rm-p0w498t8bl9p51v5n.mysql.australia.rds.aliyuncs.com:3306)/db_zone_global
-gamedb = herox:#Bugsfor$herox@tcp(rm-p0w7z7196g8858m56.mysql.australia.rds.aliyuncs.com:3306)/db_zone_1
+gamedb_10001 = herox:#Bugsfor$herox@tcp(rm-p0w7z7196g8858m56.mysql.australia.rds.aliyuncs.com:3306)/db_map_10001
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
