--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -20,7 +20,8 @@ logdb = herox:herox12345@tcp(172.19.248.176:3306)/log_global
 statdb = herox:herox12345@tcp(172.19.248.176:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gamedb = herox:herox12345@tcp(172.19.248.176:3306)/db_zone_1
+gameglobaldb = herox:herox12345@tcp(172.19.248.176:3306)/db_zone_global
+gamedb_1001 = herox:herox12345@tcp(172.19.248.176:3306)/db_map_1001
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
