--- a/conf_t.cfg
+++ b/conf_t.cfg
@@ -16,6 +16,9 @@ app = herox
 # logo
 logo = 勇士归来3终章 国内
 
+# 时区
+timezone = Asia/Shanghai
+
 # 日志数据库地址
 logdb = log:log12345@tcp(172.19.42.74:3306)/log_global
 
