--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -13,6 +13,9 @@ app = herox
 # logo
 logo = 炼金者测试服
 
+# 时区
+timezone = Asia/Shanghai
+
 # 日志数据库地址
 logdb = herox:herox12345@tcp(172.19.248.176:3306)/log_global
 
