--- a/conf_d.cfg
+++ b/conf_d.cfg
@@ -16,6 +16,9 @@ app = herox
 # logo
 logo = herox
 
+# 时区
+timezone = Asia/Shanghai
+
 # 日志数据库地址
 logdb = herox:herox12345@tcp(172.19.248.171:3306)/log_global
 
