--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -16,6 +16,9 @@ app = herox
 # logo
 logo = 炼金者cq正式
 
+# 时区
+timezone = Australia/Sydney
+
 # 日志数据库地址
 logdb = herox:#Bugsfor$herox@tcp(172.25.2.196:3306)/log_global
 
