--- a/conf_robot.cfg
+++ b/conf_robot.cfg
@@ -16,6 +16,9 @@ app = herox
 # logo
 logo = herox
 
+# 时区
+timezone = Australia/Sydney
+
 # 日志数据库地址
 logdb = herox:herox12345@tcp(172.19.42.76:3306)/log_global
 
