增加上海预发布

--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -1,37 +1,39 @@
 # 开启调试模式
-debug = 0
+debug = 1
 
 # 监听端口号
-listen = 172.19.248.176:8008
+listen = 172.19.177.126:8008
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.176 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 172.19.177.126 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
 
 # logo
-logo = 炼金者测试服
+logo = 炼金者上海预发布
 
 # 时区
 timezone = Asia/Shanghai
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.248.176:3306)/log_global
+logdb = herox:herox12345@tcp(172.19.177.126:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.176:3306)/db_stat?multiStatements=true
+statdb = herox:herox12345@tcp(172.19.177.126:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(172.19.248.176:3306)/db_zone_global
-gamedb_1001 = herox:herox12345@tcp(172.19.248.176:3306)/db_map_1001
+gameglobaldb = herox:herox12345@tcp(172.19.177.126:3306)/db_zone_global
+gamedb_10001 = herox:herox12345@tcp(172.19.177.126:3306)/db_map_1001
+gamedb_10002 = herox:herox12345@tcp(172.19.177.126:3306)/db_map_1001
+gamedb_10003 = herox:herox12345@tcp(172.19.177.126:3306)/db_map_1001
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
 
 # 日志开始时间
 <log>
-    dateMin = 2020-08-10
+    dateMin = 2021-04-20
     syncInterval = 5m
     statInterval = 5m
 </log>
