--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -28,13 +28,14 @@ statdb = herox:#Bugsfor$herox@tcp(172.27.2.28:3306)/db_stat?multiStatements=true
 # 游戏数据库地址
 gameglobaldb = herox:#Bugsfor$herox@tcp(rm-t4n36j0040mjd096s.mysql.singapore.rds.aliyuncs.com:3306)/db_zone_global
 gamedb_10001 = herox:#Bugsfor$herox@tcp(rm-t4nrq71j3uatzv23h.mysql.singapore.rds.aliyuncs.com:3306)/db_map_10001
+gamedb_18888 = herox:#Bugsfor$herox@tcp(172.27.2.30:3306)/db_map_18888
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
 
 # 日志开始时间
 <log>
-    dateMin = 2021-03-23
+    dateMin = 2021-04-18
     syncInterval = 5m
     statInterval = 5m
 </log>
