--- a/conf_t.cfg
+++ b/conf_t.cfg
@@ -5,25 +5,25 @@ debug = 0
 framework-debug = 0
 
 # 监听端口号
-listen = :7878
+listen = :8008
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.42.74 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 10.0.1.3 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
 
 # logo
-logo = 勇士归来3终章
+logo = 飞鱼正式
 
 # 日志数据库地址
-logdb = log:log12345@tcp(172.19.42.74:3306)/log_global
+logdb = log:log12345@tcp(10.0.1.3:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.42.74:3306)/db_stat?multiStatements=true
+statdb = herox:herox12345@tcp(10.0.1.3:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gamedb = herox:herox12345@tcp(172.19.42.74:3306)/db_zone_1
+gamedb = herox:herox12345@tcp(10.0.1.3:3306)/db_zone_1
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
@@ -38,5 +38,4 @@ gamedb-prefix =
 # 大R充值金额分
 <stat>
     rmoney = 500000
-    channel = ios_gm,and_gm
 </stat>
