--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -5,22 +5,22 @@ debug = 0
 listen = :8008
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.176 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 10.0.1.16 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
 
 # logo
-logo = 勇士归来3预发布
+logo = 飞鱼预发布
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.248.176:3306)/log_global
+logdb = herox:herox12345@tcp(10.0.1.16:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.176:3306)/db_stat?multiStatements=true
+statdb = herox:herox12345@tcp(10.0.1.16:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gamedb = herox:herox12345@tcp(172.19.248.176:3306)/db_zone_1
+gamedb = herox:herox12345@tcp(10.0.1.16:3306)/db_zone_1
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
