--- a/conf_t.cfg
+++ b/conf_t.cfg
@@ -20,7 +20,7 @@ logo = 飞鱼正式
 timezone = Asia/Shanghai
 
 # 日志数据库地址
-logdb = log:log12345@tcp(10.0.1.3:3306)/log_global
+logdb = herox:herox12345@tcp(10.0.1.3:3306)/log_global
 
 # web数据库地址
 statdb = herox:herox12345@tcp(10.0.1.3:3306)/db_stat?multiStatements=true
@@ -34,7 +34,7 @@ gamedb-prefix =
 
 # 日志开始时间
 <log>
-    dateMin = 2020-08-10
+    dateMin = 2019-01-01
     syncInterval = 5m
     statInterval = 5m
 </log>
