--- a/conf_d.cfg
+++ b/conf_d.cfg
@@ -23,10 +23,10 @@ timezone = Asia/Shanghai
 logdb = herox:herox12345@tcp(172.19.248.171:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.171:3306)/db_stat?multiStatements=true
+statdb = dev:777777@tcp(192.168.0.16:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(172.19.248.171:3306)/db_zone_global
+gameglobaldb = dev:777777@tcp(192.168.0.16:3306)/db_zone_global
 gamedb_1001= herox:herox12345@tcp(172.19.248.171:3306)/db_map_1001
 gamedb_1002= herox:herox12345@tcp(172.19.248.171:3306)/db_map_1002
 gamedb_1003= herox:herox12345@tcp(172.19.248.171:3306)/db_map_1003
