--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -17,24 +17,24 @@ app = herox
 logo = 飞鱼正式
 
 # 时区
-timezone = Asia/Shanghai
+timezone = UTC
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(10.0.1.3:3306)/log_global
+logdb = root:kS&XX^#cPKhFh4GJF43T@tcp(10.10.33.13:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(10.0.1.3:3306)/db_stat?multiStatements=true
+statdb = root:kS&XX^#cPKhFh4GJF43T@tcp(10.10.33.13:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(10.0.1.3:3306)/db_zone_global
-gamedb_1001 = herox:herox12345@tcp(10.0.1.3:3306)/db_zone_1
+gameglobaldb = root:kS&XX^#cPKhFh4GJF43T@tcp(10.10.33.7:3306)/db_zone_global
+gamedb_10001 = root:kS&XX^#cPKhFh4GJF43T@tcp(10.10.33.7:3306)/db_zone_1
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
 
 # 日志开始时间
 <log>
-    dateMin = 2019-01-01
+    dateMin = 2021-05-13
     syncInterval = 5m
     statInterval = 5m
 </log>
