--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -7,6 +7,9 @@ framework-debug = 1
 # 监听端口号
 listen = :8008
 
+# server
+server = 3
+
 # locator
 locator = tex.mfwregistry.QueryObj@tcp -h 172.27.2.31 -p 2000 -t 3600000:tcp -h 172.27.2.33 -p 2000 -t 3600000
 
@@ -29,7 +32,7 @@ statdb = herox:#Bugsfor$herox@tcp(172.27.2.28:3306)/db_stat?multiStatements=true
 gameglobaldb = herox:#Bugsfor$herox@tcp(rm-t4n36j0040mjd096s.mysql.singapore.rds.aliyuncs.com:3306)/db_zone_global
 
 # 游戏数据库名字前缀
-gamedb-prefix = 
+gamedb-prefix =
 
 # 日志开始时间
 <log>
