--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -4,6 +4,9 @@ debug = 1
 # 监听端口号
 listen = 172.19.177.126:8008
 
+# server
+server = 2
+
 # locator
 locator = tex.mfwregistry.QueryObj@tcp -h 172.19.177.126 -p 2000 -t 3600000
 
@@ -26,7 +29,7 @@ statdb = herox:herox12345@tcp(172.19.177.126:3306)/db_stat?multiStatements=true
 gameglobaldb = herox:herox12345@tcp(172.19.177.126:3306)/db_zone_global
 
 # 游戏数据库名字前缀
-gamedb-prefix = 
+gamedb-prefix =
 
 # 日志开始时间
 <log>
