--- a/conf_d.cfg
+++ b/conf_d.cfg
@@ -7,6 +7,9 @@ framework-debug = 1
 # 监听端口号
 listen = :8008
 
+# server
+server = 1
+
 # locator
 locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.171 -p 2000 -t 3600000
 
