--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -5,35 +5,38 @@ debug = 0
 framework-debug = 0
 
 # 监听端口号
-listen = :7878
+listen = :8008
+
+# server
+server = 3
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.42.74 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 172.16.1.12 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
 
 # logo
-logo = 勇士归来3终章 国内
+logo = 飞鱼正式
 
 # 时区
-timezone = Asia/Shanghai
+timezone = UTC
 
 # 日志数据库地址
-logdb = log:log12345@tcp(172.19.42.74:3306)/log_global
+logdb = root:kS&XX^#cPKhFh4GJF43T@tcp(172.16.1.7:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.42.74:3306)/db_stat?multiStatements=true
+statdb = root:kS&XX^#cPKhFh4GJF43T@tcp(172.16.1.7:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(172.19.42.74:3306)/db_zone_global
+gameglobaldb = root:kS&XX^#cPKhFh4GJF43T@tcp(172.16.1.6:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix = 
 
 # 日志开始时间
 <log>
-    dateMin = 2020-08-10
+    dateMin = 2021-05-13
     syncInterval = 5m
     statInterval = 5m
 </log>
@@ -41,5 +44,4 @@ gamedb-prefix =
 # 大R充值金额分
 <stat>
     rmoney = 500000
-    channel = ios_gm,and_gm
 </stat>
