--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -2,34 +2,34 @@
 debug = 1
 
 # 监听端口号
-listen = 172.19.177.126:8008
+listen = :8008
 
 # server
 server = 2
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.177.126 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 10.52.61.16 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
 
 # logo
-logo = 炼金者上海预发布
+logo = 飞鱼预发布
 
 # 时区
-timezone = Asia/Shanghai
+timezone = UTC
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.177.126:3306)/log_global
+logdb = herox:herox12345@tcp(10.52.61.16:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.177.126:3306)/db_stat?multiStatements=true
+statdb = herox:herox12345@tcp(10.52.61.16:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(172.19.177.126:3306)/db_zone_global
+gameglobaldb = herox:herox12345@tcp(10.52.61.16:3306)/db_zone_global
 
 # 游戏数据库名字前缀
-gamedb-prefix =
+gamedb-prefix = 
 
 # 日志开始时间
 <log>
