--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -7,6 +7,9 @@ framework-debug = 0
 # 监听端口号
 listen = :8008
 
+# server
+server = 3
+
 # locator
 locator = tex.mfwregistry.QueryObj@tcp -h 172.16.1.12 -p 2000 -t 3600000
 
