--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -4,6 +4,9 @@ debug = 1
 # 监听端口号
 listen = :8008
 
+# server
+server = 2
+
 # locator
 locator = tex.mfwregistry.QueryObj@tcp -h 10.52.61.16 -p 2000 -t 3600000
 
