--- a/conf.cfg
+++ b/conf.cfg
@@ -5,10 +5,13 @@ debug = 1
 framework-debug = 1
 
 # 监听端口号
-listen = :8080
+listen = :8008
+
+# server
+server = 1
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.171 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@tcp -h 192.168.0.16 -p 2000 -t 3600000
 
 # 项目名称
 app = herox
@@ -20,13 +23,13 @@ logo = herox
 timezone = Asia/Shanghai
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.248.171:3306)/log_global
+logdb = dev:777777@tcp(192.168.0.16:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.171:3306)/db_stat?multiStatements=true
+statdb = dev:777777@tcp(192.168.0.16:3306)/db_stat?multiStatements=true
 
 # 游戏数据库地址
-gamedb = herox:herox12345@tcp(172.19.248.171:3306)/db_zone_1
+gameglobaldb = dev:777777@tcp(192.168.0.16:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
