--- a/conf.cfg
+++ b/conf.cfg
@@ -28,11 +28,17 @@ logdb = dev:777777@tcp(192.168.0.16:3306)/log_global
 # web数据库地址
 statdb = dev:777777@tcp(192.168.0.16:3306)/db_stat?multiStatements=true
 
+# 节点服务数据库地址
+texdb = dev:777777@tcp(192.168.0.16:3306)/db_tex
+
 # 游戏数据库地址
 gameglobaldb = dev:777777@tcp(192.168.0.16:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
+
+# 上传目录
+upload-patch-prefix = D:/360/
 
 # 日志开始时间
 <log>
