--- a/conf_r.cfg
+++ b/conf_r.cfg
@@ -28,11 +28,16 @@ logdb = herox:#Bugsfor$herox@tcp(172.27.2.28:3306)/log_global
 # web数据库地址
 statdb = herox:#Bugsfor$herox@tcp(172.27.2.28:3306)/db_stat?multiStatements=true
 
+# 节点服务数据库地址
+texdb = herox:#Bugsfor$herox@tcp(172.27.2.28:3306)/db_tex
+
 # 游戏数据库地址
 gameglobaldb = herox:#Bugsfor$herox@tcp(rm-t4n36j0040mjd096s.mysql.singapore.rds.aliyuncs.com:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
+
+upload-patch-prefix = /data/patch/upload/
 
 # 日志开始时间
 <log>
