--- a/conf_u.cfg
+++ b/conf_u.cfg
@@ -25,11 +25,16 @@ logdb = herox:herox12345@tcp(172.19.177.126:3306)/log_global
 # web数据库地址
 statdb = herox:herox12345@tcp(172.19.177.126:3306)/db_stat?multiStatements=true
 
+# 节点服务数据库地址
+texdb = herox:herox12345@tcp(172.19.177.126:3306)/db_tex
+
 # 游戏数据库地址
 gameglobaldb = herox:herox12345@tcp(172.19.177.126:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
+
+upload-patch-prefix = /data/patch/upload/
 
 # 日志开始时间
 <log>
