--- a/conf_t.cfg
+++ b/conf_t.cfg
@@ -25,11 +25,16 @@ logdb = log:log12345@tcp(172.19.42.74:3306)/log_global
 # web数据库地址
 statdb = herox:herox12345@tcp(172.19.42.74:3306)/db_stat?multiStatements=true
 
+# 节点服务数据库地址
+texdb = log:log12345@tcp(172.19.42.74:3306)/db_tex
+
 # 游戏数据库地址
 gameglobaldb = herox:herox12345@tcp(172.19.42.74:3306)/db_zone_global
 
 # 游戏数据库名字前缀
-gamedb-prefix = 
+gamedb-prefix =
+
+upload-patch-prefix = /data/patch/upload/
 
 # 日志开始时间
 <log>
