--- a/conf.cfg
+++ b/conf.cfg
@@ -38,7 +38,7 @@ gameglobaldb = dev:777777@tcp(192.168.0.16:3306)/db_zone_global
 gamedb-prefix =
 
 # 上传目录
-upload-patch-prefix = D:/360/
+upload-patch-prefix = /data/patch/upload/
 
 # 日志开始时间
 <log>
