--- a/conf_d.cfg
+++ b/conf_d.cfg
@@ -11,7 +11,7 @@ listen = :8008
 server = 1
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.171 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@TEMPLATE_LOCATOR
 
 # 项目名称
 app = herox
@@ -23,16 +23,16 @@ logo = herox
 timezone = Asia/Shanghai
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.248.171:3306)/log_global
+logdb = herox:herox12345@tcp(TEMPLATE_IP:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.171:3306)/db_stat?multiStatements=true
+statdb = herox:herox12345@tcp(TEMPLATE_IP:3306)/db_stat?multiStatements=true
 
 # 节点服务数据库地址
 texdb = herox:herox12345@tcp(172.19.248.171:3306)/db_tex
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(172.19.248.171:3306)/db_zone_global
+gameglobaldb = herox:herox12345@tcp(TEMPLATE_IP:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
