--- a/conf_d.cfg
+++ b/conf_d.cfg
@@ -29,7 +29,7 @@ logdb = herox:herox12345@tcp(TEMPLATE_IP:3306)/log_global
 statdb = herox:herox12345@tcp(TEMPLATE_IP:3306)/db_stat?multiStatements=true
 
 # 节点服务数据库地址
-texdb = herox:herox12345@tcp(172.19.248.171:3306)/db_tex
+texdb = herox:herox12345@tcp(TEMPLATE_IP:3306)/db_tex
 
 # 游戏数据库地址
 gameglobaldb = herox:herox12345@tcp(TEMPLATE_IP:3306)/db_zone_global
