--- a/conf.cfg
+++ b/conf.cfg
@@ -14,25 +14,25 @@ server = 1
 locator = tex.mfwregistry.QueryObj@TEMPLATE_LOCATOR
 
 # 项目名称
-app = herox
+app = TEMPLATE_APP
 
 # logo
-logo = herox
+logo = TEMPLATE_APP
 
 # 时区
-timezone = Asia/Shanghai
+timezone = TEMPLATE_TIMEZONE
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(TEMPLATE_LOGIP:3306)/log_global
+logdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_LOGIP:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(TEMPLATE_STATIP:3306)/db_stat?multiStatements=true
+statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_STATIP:3306)/db_stat?multiStatements=true
 
 # 节点服务数据库地址
-texdb = herox:herox12345@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
+texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
 
 # 游戏数据库地址
-gameglobaldb = herox:herox12345@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
+gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
