--- a/conf.cfg
+++ b/conf.cfg
@@ -17,22 +17,22 @@ locator = tex.mfwregistry.QueryObj@TEMPLATE_LOCATOR
 app = TEMPLATE_APP
 
 # logo
-logo = TEMPLATE_APP
+logo = TEMPLATE_LOGO
 
 # 时区
 timezone = TEMPLATE_TIMEZONE
 
 # 日志数据库地址
-logdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_LOGIP:3306)/log_global
+logdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/log_global
 
 # web数据库地址
-statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_STATIP:3306)/db_stat?multiStatements=true
+statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/db_stat?multiStatements=true
 
 # 节点服务数据库地址
-texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
+texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
 
 # 游戏数据库地址
-gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASSWD@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
+gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
