--- a/conf.cfg
+++ b/conf.cfg
@@ -5,31 +5,40 @@ debug = 1
 framework-debug = 1
 
 # 监听端口号
-listen = :8080
+listen = :8008
+
+# server
+server = 1
 
 # locator
-locator = tex.mfwregistry.QueryObj@tcp -h 172.19.248.171 -p 2000 -t 3600000
+locator = tex.mfwregistry.QueryObj@TEMPLATE_LOCATOR
 
 # 项目名称
-app = herox
+app = TEMPLATE_APP
 
 # logo
-logo = herox
+logo = TEMPLATE_LOGO
 
 # 时区
-timezone = Asia/Shanghai
+timezone = TEMPLATE_TIMEZONE
 
 # 日志数据库地址
-logdb = herox:herox12345@tcp(172.19.248.171:3306)/log_global
+logdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/log_global
 
 # web数据库地址
-statdb = herox:herox12345@tcp(172.19.248.171:3306)/db_stat?multiStatements=true
+statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/db_stat?multiStatements=true
+
+# 节点服务数据库地址
+texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
 
 # 游戏数据库地址
-gamedb = herox:herox12345@tcp(172.19.248.171:3306)/db_zone_1
+gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
 
 # 游戏数据库名字前缀
 gamedb-prefix =
+
+# 上传目录
+upload-patch-prefix = /data/patch/upload/
 
 # 日志开始时间
 <log>
