--- a/conf.cfg
+++ b/conf.cfg
@@ -8,7 +8,7 @@ framework-debug = 1
 listen = :8008
 
 # server
-server = 1
+server = TEMPLATE_ENV
 
 # locator
 locator = tex.mfwregistry.QueryObj@TEMPLATE_LOCATOR
