--- a/conf.cfg
+++ b/conf.cfg
@@ -32,7 +32,7 @@ statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/db_stat?mult
 texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
 
 # 游戏数据库地址
-gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
+gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_loginserver
 
 # 游戏数据库名字前缀
 gamedb-prefix =
