--- a/conf.cfg
+++ b/conf.cfg
@@ -21,6 +21,7 @@ logo = TEMPLATE_LOGO
 
 # 时区
 timezone = TEMPLATE_TIMEZONE
+zoneoffset = 2
 
 # 日志数据库地址
 logdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/log_global
