# 后台增加自动开服功能

--- a/conf.cfg
+++ b/conf.cfg
@@ -34,6 +34,9 @@ texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
 # 游戏数据库地址
 gameglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_loginserver
 
+#服务器数据库地址
+serverglobaldb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_zone_global
+
 # 游戏数据库名字前缀
 gamedb-prefix =
 
