--- a/conf.cfg
+++ b/conf.cfg
@@ -26,7 +26,7 @@ timezone = TEMPLATE_TIMEZONE
 logdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/log_global
 
 # web数据库地址
-statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_LOGIP:3306)/db_stat?multiStatements=true
+statdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_STATIP:3306)/db_stat?multiStatements=true
 
 # 节点服务数据库地址
 texdb = TEMPLATE_DB_USER:TEMPLATE_DB_PASS@tcp(TEMPLATE_GLOBALIP:3306)/db_tex
